src/objects/Portfolio__c.object
<CustomObject>
    <description>Portfolio&apos;s are a summary of all work for a particular type of IT services.  For example, &quot;2009 infrastructure improvements&quot; which would include &quot;upgrade laptops&quot;  or &quot;FY09 Business Applications Upgrade&quot; which might include &quot;New CRM system&quot; or &quot;New ERP reporting solution&quot;.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Budget__c</fullName>
        <label>Planned Budget</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portfolio_Goals__c</fullName>
        <label>Portfolio Goals</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Long_Description__c</fullName>
        <label>Portfolio Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Type__c</fullName>
        <label>Investment Nature</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Portfolio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>